Made fixes to get group members to display properly on main dashboard.  Adjusted max-height of product images so that the carousel display would not have overflow.

--- a/assets/css/mainDashboardStyle.css
+++ b/assets/css/mainDashboardStyle.css
@@ -13,6 +13,11 @@
     
 }
 
+.carousel img{
+    max-height: 200px;
+    width: auto;
+}
+
 #header img {
     box-sizing: content-box;
     
